Add extractToConst tests with quickpick and rename